--- a/content/publication/journal-article/cite.bib
+++ b/content/publication/journal-article/cite.bib
@@ -6,3 +6,11 @@
   volume  = 1,
   number  = 1
 }
+@article{example22,
+  title = {An example journal article},
+  author={Dasgupta, Nelson and Ford, Robert},
+  journal = {Journal of Source Themes},
+  year    = 2015,
+  volume  = 1,
+  number  = 1
+}
